get data from event args

--- a/TaxCalculator.WebFrontend/Shared/MainLayout.razor
+++ b/TaxCalculator.WebFrontend/Shared/MainLayout.razor
@@ -42,7 +42,11 @@
 
     private void OnStateChanged(object? sender, StateChangedEventArgs e)
     {
-        CurrentProfile = _stateManager.GetActualState<UpdateTaxProfileModel>(StateEventList.CurrentProfileChanged);
+        if (e.EventName == StateEventList.CurrentProfileChanged)
+        {
+            CurrentProfile = e.CurrentState as UpdateTaxProfileModel;
+        }
+        
         StateHasChanged();
     }
 }
