--- a/TaxCalculator.WebFrontend/Pages/Taxes/TaxCreate.razor
+++ b/TaxCalculator.WebFrontend/Pages/Taxes/TaxCreate.razor
@@ -3,11 +3,11 @@
 @using TaxCalculator.WebFrontend.Models
 @using TaxCalculator.WebFrontend.Shared.FormInputs
 @using TaxCalculator.WebFrontend.Validation
-@using TaxCalculator.Domain.Enums
 @using TaxCalculator.Cqrs.Contracts.Bus
 @using TaxCalculator.WebFrontend.Pages.Taxes.Commands
 @using TaxCalculator.Cqrs.Contracts
 @using TaxCalculator.Contracts
+@using TaxCalculator.WebFrontend.Enums
 
 @inject ICommandBus _commandBus
 @inject NavigationManager _navigationManager
