--- a/TaxCalculator.WebFrontend/Pages/Taxes/TaxEdit.razor
+++ b/TaxCalculator.WebFrontend/Pages/Taxes/TaxEdit.razor
@@ -3,12 +3,12 @@
 @using TaxCalculator.WebFrontend.Models
 @using TaxCalculator.WebFrontend.Shared.FormInputs
 @using TaxCalculator.WebFrontend.Validation
-@using TaxCalculator.Domain.Enums
 @using TaxCalculator.Cqrs.Contracts.Bus
 @using TaxCalculator.WebFrontend.Pages.Taxes.Commands
 @using TaxCalculator.WebFrontend.Pages.Taxes.Queries
 @using TaxCalculator.Cqrs.Contracts
 @using TaxCalculator.Contracts
+@using TaxCalculator.WebFrontend.Enums
 
 @inject IQueryBus _queryBus
 @inject ICommandBus _commandBus
