--- a/TaxCalculator.UI.Desktop/Shell.xaml
+++ b/TaxCalculator.UI.Desktop/Shell.xaml
@@ -2,7 +2,7 @@
 <!-- Licensed under the MIT License. See LICENSE in the project root for license information. -->
 
 <Window
-    x:Class="TaxCalculator.UI.Desktop.MainWindow"
+    x:Class="TaxCalculator.UI.Desktop.Shell"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:TaxCalculator.UI.Desktop"
@@ -10,7 +10,14 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" VerticalAlignment="Center">
-        <Button x:Name="myButton" Click="myButton_Click">Click Me</Button>
-    </StackPanel>
+    <NavigationView Name="NavigationView"
+                    IsSettingsVisible="False"
+                    SelectionChanged="NavigationView_OnSelectionChanged"
+                    Loaded="NavigationView_OnLoaded"
+                    PaneDisplayMode="LeftCompact">
+        <NavigationView.MenuItems>
+            
+        </NavigationView.MenuItems>
+        <Frame Name="ContentFrame" />
+    </NavigationView>
 </Window>
