--- a/TaxCalculator.UI.Desktop/Controls/DataGrid/AutoGeneratedDataGrid.xaml
+++ b/TaxCalculator.UI.Desktop/Controls/DataGrid/AutoGeneratedDataGrid.xaml
@@ -9,13 +9,12 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="using:CommunityToolkit.WinUI.UI.Controls"
-    mc:Ignorable="d"
-    x:Name="Root">
+    mc:Ignorable="d">
 
     <controls:DataGrid Name="DataGrid"
                        Loaded="FrameworkElement_OnLoaded"
                        AutoGenerateColumns="False"
-                       ItemsSource="{Binding Items, ElementName=Root, Mode=TwoWay}">
+                       ItemsSource="{x:Bind Items, Mode=TwoWay}">
 
     </controls:DataGrid>
 </UserControl>
