--- a/TaxCalculator.UI.Desktop/Views/TaxProfiles/TaxProfileView.xaml
+++ b/TaxCalculator.UI.Desktop/Views/TaxProfiles/TaxProfileView.xaml
@@ -14,7 +14,7 @@
     d:DataContext="{d:DesignInstance local:TaxProfileViewModel}">
 
     <Grid>
-        <c:CrudDataGrid Items="{Binding Items, Mode=TwoWay}"
+        <c:CrudDataGrid Items="{Binding ItemsWatcher.Result, Mode=TwoWay}"
                         AddButtonCommand="{Binding AddNewCommand}" />
     </Grid>
 </Page>
