--- a/TaxCalculator.Desktop/Controls/NavigationMenuItem.axaml
+++ b/TaxCalculator.Desktop/Controls/NavigationMenuItem.axaml
@@ -17,7 +17,6 @@
                         Background="{TemplateBinding Background}">
                     <Grid ColumnDefinitions="Auto,*">
                         <Viewbox VerticalAlignment="Center"
-                                 Margin="10 0 10 0"
                                  HorizontalAlignment="Center"
                                  Height="{TemplateBinding IconHeight}"
                                  Width="{TemplateBinding IconWidth}">
@@ -44,8 +43,12 @@
         
         <Setter Property="Height" Value="40" />
         <Setter Property="Width" Value="280" />
-        <Setter Property="CornerRadius" Value="10" />
+        <Setter Property="CornerRadius" Value="8" />
         <Setter Property="Background" Value="#F2F2F2" />
+    </Style>
+    
+    <Style Selector="controls|NavigationMenuItem Viewbox">
+        <Setter Property="Margin" Value="10 0 10 0" />
     </Style>
     
     <Style Selector="controls|NavigationMenuItem:selected">
